# nvidia-nim-switch-python

./: .dockerignore  .env.example  ATTRIBUTION.md  BREAKTHROUGH.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_FOLDER_TEST_RESULTS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  INSTALLATION.md  MANUAL_TEST_STEPS.md  MODEL_SWITCHING.md  PUBLISHED_SUCCESS.md  PUBLISHING.md  README.md  cloudflare_config.txt  demo.py  docker-compose.yml  failed_models.txt  install.sh  models.json  pyproject.toml  server.py  test-claude-auth.sh  test_cc_from_hongyanab.sh  test_model_switching.py  working_models.txt
api/: app.py  models.py  routes.py
cc_nvd/: __init__.py  cli.py
config/: current_model.json  model_presets.py  settings.py
docs/: BLUEHAWANA_DEPLOYMENT.md  CLOUDFLARE_SETUP.md  FOR_NON_DEVELOPERS.md  HONGYANAB_DEMO.md  MODEL_COMPATIBILITY.md  MODEL_SPEED_GUIDE.md  NO_LOGIN_REQUIRED.md  PROJECT_STATUS.md  PUBLISH_CHECKLIST.md  PUSH_TO_GITHUB.md  QUICK_START.md  README_SIMPLE.md  SWITCHING_BETWEEN_FREE_AND_PAID.md  TESTING_SUMMARY.md  VPS_DEPLOYMENT.md  WINDOWS_INSTALLATION.md
homebrew/: cc-nvd-python.rb  cc-nvd.rb
messaging/: telegram.py
providers/: model_utils.py
scripts/: deploy_complete.sh  deploy_vps.sh  install-nvd  install_global.sh  reset_claude_cache.sh  setup_cloudflare.sh  test_all_models.sh  test_claude_auth.sh  test_cloudflare.sh
static/: index.html  script.js  style.css
