[project]
name = "cc-nvd-python"
version = "1.0.0"
description = "Enhanced NVIDIA NIM proxy with dynamic model switching capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "websockets>=13.0",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.12.0",
    "aiolimiter>=1.2.1",
    "openai>=2.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
cc-nvd = "cc_nvd.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/cc-nvd-python"
Repository = "https://github.com/yourusername/cc-nvd-python"
Documentation = "https://github.com/yourusername/cc-nvd-python/blob/main/README.md"
Issues = "https://github.com/yourusername/cc-nvd-python/issues"